# ldmx-sim-technique

./: .gitignore  .gitmodules  Dockerfile  README.md  analysis.py  config.py  dblib-batch.md  dmg4.py  scratch.ipynb  to_csv.py  xsec.ipynb
ana/: .gitignore  README.md  analysis.py  dark_brem_lhe.py  plot-dev.ipynb  plot.py  requirements.txt  scaling-plot.py  xsec.py  xsec_plot.py
michaelCode/madgraph/: LHE_Root.py  Madgraph_Submit_Script.py  MuRunUndecayed.sh  README.md  RunUndecayed.sh
michaelCode/plotting/: cx_comp.py  cx_comp_0p1.C  cx_comp_0p1_W.C  cx_comp_0p1_pb.C  cx_comp_mu.py  cx_mu_comp_0p2_Cu.C  dphoton_root_extractor.py  dumbToken.txt  plotter.py  scaleDistanceAngle.C  scaleDistanceAngleMu.C  scaleDistanceComp_ang.py  scaleDistanceComp_ke.py  scaleDistanceKEFractions.C  scaleDistanceKEFractionsMu.C  scaleDistanceNotebookExample.ipynb
michaelCode/sim/: DarkPhotons.cc  DarkPhotons.hh  README.md  cxcalc  cxcalc.cc  cxcalc_massVariation_mu.cc  cxcalc_mu  cxcalc_mu.cc  cxcalc_mu_massvary  muSimulateEmission.cc  simulate  simulateDbrem  simulateEmission.cc  simulateMuDbrem
sim/: .gitignore  .ldmxrc  README.md  config.py  dbgen_parallel.sh  dmg4.py  env.sh  ldmx_parallel.sh  run.sh
sim/sw/: CMakeLists.txt  README.md  ldmx-env
sim/sw/Biasing/src/Biasing/: EcalDarkBremFilter.cxx  NtuplizeDarkBremInteraction.cxx  TargetDarkBremFilter.cxx
sim/sw/Biasing/src/Biasing/Utility/: StepPrinter.cxx
sim/sw/DMG4/: CMakeLists.txt  HISTORY  README  clean  configure  runconfigure  runconfigure_goa  runconfigure_lcg  runconfigure_pc18  runconfigure_test
sim/sw/DMG4/DATA/: ordTable_QGSP_BERT.txt
sim/sw/DMG4/examples/: CMakeLists.txt  configure  mkgeant4.cc
sim/sw/DMG4/examples/example1/: mkgeant4.cc
sim/sw/DMG4/examples/example1022/: DarkMatterPhysicsConfigure.cc
sim/sw/DMG4/examples/testCS/: DarkPhotonsSigmaTotETL.inc  config.csh  config.sh  mkgeant4.cc  runconfigure
sim/sw/DMG4/include/: ALP.hh  DarkAxials.hh  DarkAxialsAnnihilation.hh  DarkMatter.hh  DarkMatterSampler.hh  DarkPhotons.hh  DarkPhotonsAnnihilation.hh  DarkPseudoScalars.hh  DarkPseudoScalarsAnnihilation.hh  DarkScalars.hh  DarkScalarsAnnihilation.hh  DarkVector.hh  DarkZ.hh  Utils.hh
sim/sw/DMG4/include/DMG4/: DMParticle.hh  DMParticleALP.hh  DMParticleAPrime.hh  DMParticleAxial.hh  DMParticlePseudoScalar.hh  DMParticleScalar.hh  DMParticleXBoson.hh  DMParticleXPseudoScalar.hh  DMParticleXScalar.hh  DMParticleZPrime.hh  DMProcessAnnihilation.hh  DMProcessDMBrem.hh  DMProcessPrimakoffALP.hh  DMStepLimiter.hh  DarkMatterPhysics.hh
sim/sw/DMG4/modules_cmake_standalone/: FindDMG4.cmake  FindROOT.cmake
sim/sw/DMG4/src/DMG4/: DMParticleALP.cc  DMParticleAPrime.cc  DMParticleAxial.cc  DMParticlePseudoScalar.cc  DMParticleScalar.cc  DMParticleXBoson.cc  DMParticleXPseudoScalar.cc  DMParticleXScalar.cc  DMParticleZPrime.cc  DMProcessAnnihilation.cc  DMProcessDMBrem.cc  DMProcessPrimakoffALP.cc  DMStepLimiter.cc  DarkMatterPhysics.cc  DarkMatterPhysicsConfigure.cc  DarkMatterPhysicsConfigureWithPars.cc
sim/sw/DMG4/src/DarkMatter/: ALP.cc  DarkAxials.cc  DarkAxialsAnnihilation.cc  DarkMatter.cc  DarkPhotons.cc  DarkPhotonsAnnihilation.cc  DarkPseudoScalars.cc  DarkPseudoScalarsAnnihilation.cc  DarkScalars.cc  DarkScalarsAnnihilation.cc  DarkVector.cc  DarkZ.cc  DiffCS2DInterp.code  DiffCS2DInterpAxials.code  DiffCS2DInterpPseudoScalars.code  DiffCS2DInterpScalars.code  KFactors.code  KFactorsAxials.code  KFactorsPseudoScalars.code  KFactorsScalars.code
sim/sw/DMG4/src/UtilsDM/: Parinv.cc
sim/sw/Detectors/: CMakeLists.txt
sim/sw/G4DarkBreM/: CMakeLists.txt  README.md
sim/sw/G4DarkBreM/app/: print_dark_brem_xsec_table.cxx  simulate_dark_brem.cxx
sim/sw/G4DarkBreM/include/G4DarkBreM/: APrimePhysics.h  DMG4Model.h  DarkBremVertexLibraryModel.h  G4DarkBreMModel.h  G4DarkBremsstrahlung.h
sim/sw/G4DarkBreM/python/: dark_brem.py
sim/sw/G4DarkBreM/src/G4DarkBreM/: APrimePhysics.cxx  DMG4Model.cxx  DarkBremVertexLibraryModel.cxx  G4APrime.cxx  G4DarkBreMModel.cxx  G4DarkBremsstrahlung.cxx  G4eDarkBremsstrahlung.cxx  print_dark_brem_xsec_table.cxx
sim/sw/SimCore/: CMakeLists.txt
sim/sw/SimCore/include/SimCore/: APrimePhysics.h  DMG4Model.h  DetectorConstruction.h
sim/sw/SimCore/include/SimCore/BiasOperators/: DarkBrem.h
sim/sw/SimCore/include/SimCore/Event/: SimParticle.h
sim/sw/SimCore/include/SimCore/Geo/: AuxInfoReader.h
sim/sw/SimCore/include/SimCore/Persist/: RootPersistencyManager.h
sim/sw/SimCore/python/: actions.py  dark_brem.py  simulator.py.in  write_detector.py
sim/sw/SimCore/src/SimCore/: APrimePhysics.cxx  DMG4Model.cxx  DetectorConstruction.cxx  NtuplizeDarkBremInteraction.cxx  RunManager.cxx  Simulator.cxx  UserTrackingAction.cxx
sim/sw/SimCore/src/SimCore/Actions/: EcalDarkBremFilter.cxx  PartialEnergySorter.cxx  StepPrinter.cxx
sim/sw/SimCore/src/SimCore/DarkBrem/: DarkBremVertexLibraryModel.cxx
sim/sw/SimCore/src/SimCore/Event/: SimParticle.cxx
sim/sw/SimCore/src/SimCore/Geo/: AuxInfoReader.cxx  GDMLParser.cxx
sim/sw/SimCore/src/SimCore/Persist/: RootPersistencyManager.cxx
sim/sw/app/: dmg4-xsec-calc.cxx
sim/sw/xsec/: .gitignore  README.md  makefile  mu_xsec_1GeV.csv  xsec_calc.cxx
src/SimCore/: RunManager.cxx
src/SimCore/DarkBrem/: DMG4Model.cxx  DarkBremVertexLibraryModel.cxx  G4eDarkBremsstrahlung.cxx
